<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.new_meeting.NewMeetingActivity">

    <TextView
        android:id="@+id/meeting_image_pres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:gravity="center_horizontal"
        android:text="@string/new_meeting_pres"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/new_meeting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_meeting_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_meeting_title_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_meeting_title_hint"
        android:inputType="text"
        android:textColorHint="@color/medium_grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/new_meeting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_meeting_date"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_meeting_date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/new_meeting_date_field"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/new_meeting_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/new_meeting_time"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_meeting_time_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/new_meeting_time_field"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/new_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/new_meeting_room"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/new_meeting_room_spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/spinner_rooms"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/new_meeting_attendees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/new_meeting_attendees"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/new_meeting_new_attendee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/new_meeting_attendee"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="12sp" />

    <ImageButton
        android:layout_marginTop="10dp"
        android:id="@+id/new_meeting_add_attendee"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_fab_add" />

    <Button
        android:id="@+id/new_meeting_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/meeting_creation" />


</LinearLayout>